--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,18 +25,18 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/theme"
+                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="16dp"
-                android:background="@null"
-                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
-                app:tint="?bw"
                 android:layout_marginEnd="16dp"
+                android:background="@null"
                 android:padding="12dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_moon" />
+                android:src="@drawable/ic_moon"
+                app:tint="?bw" />
 
         </RelativeLayout>
     </com.google.android.material.appbar.MaterialToolbar>
@@ -58,6 +58,8 @@
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:imeOptions="actionSearch"
+            android:singleLine="true"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
