--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="120dp"
+    android:layout_width="match_parent"
     android:layout_height="190dp"
     android:layout_gravity="center_horizontal"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="4dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="4dp"
     android:layout_marginBottom="4dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/poster_card"
-        android:layout_width="120dp"
+        android:layout_width="110dp"
         android:layout_height="140dp"
-        app:cardCornerRadius="4dp"
+        app:cardCornerRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,7 +33,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_fa"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
@@ -41,11 +41,13 @@
         android:maxLines="1"
         android:textColor="?movieTitle"
         android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@id/poster_card"
+        app:layout_constraintStart_toStartOf="@id/poster_card"
         app:layout_constraintTop_toBottomOf="@id/poster_card" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_en"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:alpha=".7"
         android:ellipsize="end"
@@ -53,6 +55,8 @@
         android:maxLines="1"
         android:textColor="?movieTitle"
         android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@id/poster_card"
+        app:layout_constraintStart_toStartOf="@id/poster_card"
         app:layout_constraintTop_toBottomOf="@id/title_fa" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
